Rearranged items for community. Added designs for viewing and comparing backtests. Modified editor design.

--- a/src/components/analyze/aq-analyze-home-menu.html
+++ b/src/components/analyze/aq-analyze-home-menu.html
@@ -130,11 +130,11 @@
 			},
 
 			onDelete() {
-				this.fire('deletePressed');
+				this.fire('delete-pressed');
 			},
 
 			onCompare() {
-				this.fire('comparePressed');
+				this.fire('compare-pressed');
 			},
 
 			checkForKeys: function (e) {
@@ -154,7 +154,7 @@
             },
 
             goToEditor() {
-            	this.fire('goToEditorClicked');
+            	this.fire('back-clicked');
             },
 
 
