--- a/src/components/community/aq-community-postdetail-content.html
+++ b/src/components/community/aq-community-postdetail-content.html
@@ -38,7 +38,7 @@
   <template>
     <div id='post-content'>
       <div id='author' class="layout horizontal">   
-        <profile-img id='img' letter="S" class="self-end"></profile-img>  
+        <profile-img id='img' letter="SC" class="self-end"></profile-img>  
          <div id='author-desc' class="layout vertical self-end">   
             <a href$="[[authoraddress]]">
               <span id="author-name">[[author]]Shiv Chawla</span>
