--- a/src/components/community/aq-community-postdetail-header.html
+++ b/src/components/community/aq-community-postdetail-header.html
@@ -66,8 +66,8 @@
       <div class="layout horizontal">
         <span id='category' class="self-top">Share your Idea</span>
         <div class="flex"></div>
-        <paper-icon-button title="Follow" icon="icons:add"></paper-icon-button>
-        <paper-icon-button title="Share" icon="icons:add"></paper-icon-button>
+        <paper-icon-button title="Follow" icon="vaadin-icons:megafone"></paper-icon-button>
+        <paper-icon-button title="Share" icon="vaadin-icons:share-square"></paper-icon-button>
       </div>
 
       <aq-community-postdetail-content id='header-content'></aq-community-postdetail-content>
