--- a/src/components/editor/aq-editor-home-elementmenu.html
+++ b/src/components/editor/aq-editor-home-elementmenu.html
@@ -76,7 +76,7 @@
       </a>
 
       <a tabindex="0" role="button" on-click="shareStrategy" aria-label="Share Strategy">
-        <iron-icon icon="social:share" title="Share Strategy"></iron-icon>
+        <iron-icon icon="vaadin-icons:share-square" title="Share Strategy"></iron-icon>
         <!--span hidden$="[[iconsOnly]]">Share</span-->
       </a>
     </div>
