--- a/src/components/editor/aq-editor-sidebar-run.html
+++ b/src/components/editor/aq-editor-sidebar-run.html
@@ -151,9 +151,9 @@
 	<template>
 		
 		<div id = 'run'>
+			<h3>Run Settings</h3>
 			<div id = 'basic-settings' class="layout vertical">
 				<div id='heading'><span>Basic Settings</span></div>
-
 				<div id='date-settings' class="layout horizontal">
 			
 					<div class="inputbox">	
