--- a/src/components/editor/aq-editor-edit-programmer.html
+++ b/src/components/editor/aq-editor-edit-programmer.html
@@ -2,7 +2,9 @@
 <link rel="import" href="../../../bower_components/iron-selector/iron-selector.html">
 <link rel="import" href="../../../bower_components/iron-collapse/iron-collapse.html">
 
-<link rel="import" href="../../../bower_components/paper-scroll-header-panel/paper-scroll-header-panel.html">
+<link rel="import" href="../../../bower_components/paper-header-panel/paper-header-panel.html">
+<link rel="import" href="../../../bower_components/paper-toolbar/paper-toolbar.html">
+
 <link rel="import" href="../../../bower_components/juicy-ace-editor/juicy-ace-editor.html">
 <link rel="import" href="../../../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../../../bower_components/iron-icon/iron-icon.html">
@@ -52,8 +54,20 @@
     background-color: white;
   }
 
-  paper-toolbar {
+    paper-toolbar {
       --paper-toolbar-height:40px;
+      --paper-toolbar-background:#B2DFDB;--#e0f2f1;
+      --paper-toolbar-color:black;--teal;
+    }
+
+    paper-tabs :hover{
+        font-weight: bold;
+        font-size:110%;
+      }
+
+    paper-tabs {
+        --paper-tabs-selection-bar-color: teal;
+        height:90%;
     }
 
 </style>
@@ -62,13 +76,16 @@
 
   <template>
 
-      <paper-drawer-panel drawer-width='340px' responsive-width='730px' class="drawerpanel" id="drawerpanel" right-drawer force-narrow={{!showSideBar}}>
-        <div main> 
-            <juicy-ace-editor style="height:100%;" theme="ace/theme/monokai" mode="ace/mode/python" fontsize="13px" id="code-editor">
-            </juicy-ace-editor>      
+
+      <paper-drawer-panel drawer-width='370px' responsive-width='730px' class="drawerpanel" id="drawerpanel" right-drawer force-narrow="{{!showSideBar}}">
+       <div main> 
+        <juicy-ace-editor style="height:100%;" theme="ace/theme/xcode" mode="ace/mode/julia" fontsize="13px" id="code-editor" wrapmode tabsize="4">
+        </juicy-ace-editor>  
         </div>
-       
-        <paper-header-panel drawer style="height:50% margin-top:300px">
+
+
+
+        <paper-header-panel drawer mode="seamed">
           <paper-toolbar>
               <paper-tabs selected="{{selectedSideBar}}" noink>
                 <paper-tab>Run</paper-tab>
@@ -77,8 +94,10 @@
           </paper-toolbar>
 
             <iron-pages selected="{{selectedSideBar}}">
-              <aq-editor-sidebar-run></aq-editor-sidebar-run>
+           
+              <aq-editor-sidebar-run></aq-editor-sidebar-run>  
               <div>This is quick help!!</div>
+              
             </iron-pages>
         
         </paper-header-panel>
@@ -103,18 +122,35 @@
           type:Number,
           value:0,
         },
+        sideBarOpen:{
+          type:Boolean,
+          value:true,
+        }
       },
 
-     toggleDrawer() {
+      toggleDrawer() {
+        
+        if(this.showSideBar && this.$.drawerpanel.narrow) {
           this.$.drawerpanel.togglePanel();
-          this.showSideBar = !this.showSideBar;
+        } else if (this.showSideBar && !this.$.drawerpanel.narrow) {
+          this.closeDrawer();
+        } else {
+          this.openDrawer();
+        }
+      },
+
+      openDrawer() { 
+        this.$.drawerpanel.openDrawer();
+        this.showSideBar = true;
       },
 
       closeDrawer() {
-        if(this.showSideBar) {
-          this.toggleDrawer();
+        this.$.drawerpanel.closeDrawer();
+  
+        if (this.showSideBar && !this.$.drawerpanel.narrow) {
+          this.showSideBar = false;
         }
-      },
+      }, 
 
     });
   </script>
