--- a/src/layouts/aq-analyze-main.html
+++ b/src/layouts/aq-analyze-main.html
@@ -2,9 +2,11 @@
 <link rel="import" href="../../bower_components/paper-scroll-header-panel/paper-scroll-header-panel.html">
 <link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel='import' href='../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
+<link rel='import' href='../../bower_components/app-router/app-router.html'>
 
-<link rel="import" href="../components/aq-toolbar.html">
-
+<link rel="import" href="../components/analyze/aq-analyze-home.html">
+<link rel="import" href="../components/analyze/aq-analyze-compare.html">
+<link rel="import" href="../components/analyze/aq-analyze-compare-results.html">
 
 <dom-module id="aq-analyze-main">
   <style is="custom-style" include="iron-flex iron-positioning"></style>
@@ -14,6 +16,11 @@
     }
   </style>
   <template>
+    <app-router mode="hash" trailingSlash="ignore">
+        <app-route path="/dashboard/analyze" element='aq-analyze-home' bindrouter=""></app-route>
+        <app-route path="/dashboard/analyze/compare" element='aq-analyze-compare' bindrouter=""></app-route>
+        <app-route path="/dashboard/analyze/compare/x" element='aq-analyze-compare-results' bindrouter=""></app-route>
+    </app-router>
   </template>
 
   <script>
